# worms_war

sources/: CMakeLists.txt  board.cpp  board.h  graphics.cpp  graphics.h  main.cpp  worm.cpp  worm.h
sources/tests/: CMakeLists.txt  test.cpp
